# rumoca

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Modelica.Clocked.Examples.Elementary.BooleanSignals.AssignClock_results.html  README.md  TODO.md  Wrapper_results.html  clippy.toml  flake.nix  install.sh  rust-toolchain.toml
crates/rumoca-bind-python/: Cargo.toml  README.md  build.rs  pyproject.toml  rumoca.pyi
crates/rumoca-bind-python/src/: codegen.rs  diagnostics.rs  error.rs  gradient.rs  lib.rs  metadata.rs  model.rs  python_result.rs  result.rs  scenario.rs  session.rs  targets.rs  tests.rs
crates/rumoca-bind-python/tests/: api_test.py  export_test.py  magic_test.py  smoke_test.py
crates/rumoca-bind-wasm/: Cargo.toml  README.md  build.rs
crates/rumoca-bind-wasm-diffsol/: Cargo.toml
crates/rumoca-bind-wasm-diffsol/src/: lib.rs
crates/rumoca-bind-wasm-galec/: Cargo.toml
crates/rumoca-bind-wasm-galec/src/: lib.rs
crates/rumoca-bind-wasm/bindgen/: README.md  package.json  patch-wasm-pkg.mjs
crates/rumoca-bind-wasm/js/: rumoca_worker.js
crates/rumoca-bind-wasm/src/: class_browser_helpers.rs  gpu_api.rs  lib.rs  project_config_api.rs  scenario_config_api.rs  simulation_api.rs  simulation_session_api.rs  source_root_api.rs  stepper_api.rs  tests.rs  workspace_config_api.rs
crates/rumoca-bind-wasm/web/: stepper_3d.html
crates/rumoca-contracts/: Cargo.toml  README.md
crates/rumoca-contracts/data/: contract_cases.toml  contracts.toml
crates/rumoca-contracts/src/: lib.rs  report.rs  runner.rs  test_support.rs
crates/rumoca-contracts/tests/: alg_contracts.rs  ann_contracts.rs  arr_contracts.rs  clk_contracts.rs  conn_contracts.rs  contract_coverage.rs  decl_contracts.rs  eqn_contracts.rs  expr_contracts.rs  func_contracts.rs  inst_contracts.rs  lex_contracts.rs  oprec_contracts.rs  pkg_contracts.rs  registry_invariants.rs  sim_contracts.rs  sm_contracts.rs  strm_contracts.rs  type_contracts.rs  unit_contracts.rs
crates/rumoca-efmi/: Cargo.toml  build.rs
crates/rumoca-efmi/src/: algorithm_code_manifest.rs  checksum.rs  container.rs  content.rs  diagnostic.rs  ids.rs  lib.rs  manifest_common.rs  production_code_manifest.rs  xml.rs
crates/rumoca-efmi/tests/: container_efmu.rs  golden_xml.rs
crates/rumoca-eval-ast/: Cargo.toml  README.md
crates/rumoca-eval-ast/src/: compiled.rs  constant.rs  lib.rs  path_utils.rs  runtime.rs
crates/rumoca-eval-compiled/: Cargo.toml
crates/rumoca-eval-compiled/src/: ad.rs  lib.rs  linear_op.rs
crates/rumoca-eval-const/: Cargo.toml
crates/rumoca-eval-const/src/: builtins.rs  function_eval.rs  lib.rs  value.rs
crates/rumoca-eval-dae/: Cargo.toml  README.md
crates/rumoca-eval-dae/src/: ad.rs  compiled.rs  constant.rs  initial_assignments.rs  layout.rs  lib.rs  runtime.rs  sim_float.rs  statement.rs  trace.rs
crates/rumoca-eval-flat/: Cargo.toml  README.md
crates/rumoca-eval-flat/src/: compiled.rs  lib.rs  runtime.rs
crates/rumoca-eval-runtime/: Cargo.toml
crates/rumoca-eval-runtime/src/: lib.rs  statement.rs
crates/rumoca-eval-solve/: Cargo.toml
crates/rumoca-eval-solve/src/: compute_block_scalarize.rs  eval_at.rs  inspect_alloc.rs  iterative_solve.rs  jacobian.rs  lib.rs  linear_solve.rs  nan_trace.rs  prepared.rs  random_runtime.rs  refresh_plan.rs  reverse.rs  runtime.rs  runtime_events.rs  sim_driver.rs  sparsity.rs  table_runtime.rs  tests.rs  update_rows.rs
crates/rumoca-exec-cranelift/: Cargo.toml
crates/rumoca-exec-cranelift/src/: emit.rs  lib.rs
crates/rumoca-exec-mlir/: Cargo.toml
crates/rumoca-exec-mlir/src/: compile.rs  compiled.rs  cuda_driver.rs  cuda_gpu_model.rs  error.rs  euler_kernel.rs  gpu_blob.rs  lib.rs  libdevice.rs  options.rs  sim.rs
crates/rumoca-exec-mlir/tests/: benchmark_matmul.rs  compile_basic.rs  drone_monte_carlo.rs  gpu_ptx.rs  gpu_trig.rs  implicit_euler.rs  integrate.rs  linsolve_mlir.rs  multi_fn_mlir.rs  options.rs  render_mlir.rs
crates/rumoca-exec-wasm/: Cargo.toml
crates/rumoca-exec-wasm/src/: emit.rs  lib.rs
crates/rumoca-galec/: Cargo.toml
crates/rumoca-galec-codegen/: Cargo.toml
crates/rumoca-galec-codegen/src/: c_lower.rs  c_mangle.rs  c_print.rs  classify.rs  diagnostic.rs  emit.rs  input.rs  lib.rs  lower.rs  mangle.rs  manifest_context.rs  manifest_vars.rs  package.rs  production_manifest.rs
crates/rumoca-galec-codegen/tests/: efmi_discrete_pid_lowering.rs  projection_front_half.rs  spec_0034_battery.rs
crates/rumoca-galec/src/: ast.rs  diagnostic.rs  lib.rs  validate.rs
crates/rumoca-galec/tests/: block_print.rs  builtin_catalog.rs  expression_print.rs  literal_format.rs  roundtrip.rs  validate.rs
crates/rumoca-input/: Cargo.toml
crates/rumoca-input/src/: config.rs  device.rs  lib.rs  signal_mapper.rs
crates/rumoca-io-fb/: Cargo.toml
crates/rumoca-io-fb/src/: codec.rs  config.rs
crates/rumoca-ir-ast/: Cargo.toml  README.md
crates/rumoca-ir-ast/src/: instance.rs  lib.rs  modelica.rs  nodes.rs  scope.rs  state_machines.rs  types.rs  visitor.rs
crates/rumoca-ir-dae/: Cargo.toml  README.md
crates/rumoca-ir-dae/src/: event_threshold.rs  expr_query.rs  fold_start_values.rs  lib.rs  types.rs  visitor.rs
crates/rumoca-ir-flat/: Cargo.toml  README.md
crates/rumoca-ir-flat/src/: clocks.rs  component_ref_helpers.rs  connections.rs  convert_from_ast.rs  function.rs  lib.rs  name_utils.rs  subscripts.rs  tests.rs  visitor.rs  when_equations.rs
crates/rumoca-ir-solve/: Cargo.toml  README.md
crates/rumoca-ir-solve/src/: compute_block_tests.rs  layout.rs  lib.rs  linear_op.rs  tests.rs  visitor.rs
crates/rumoca-lsp-position/: Cargo.toml
crates/rumoca-lsp-position/src/: lib.rs
crates/rumoca-opt/: Cargo.toml
crates/rumoca-opt/src/: error.rs  lib.rs  model.rs  objective.rs  optimizer.rs  tests.rs
crates/rumoca-phase-codegen/: Cargo.toml  README.md  build.rs
crates/rumoca-phase-codegen/src/: codegen.rs  errors.rs  lib.rs
crates/rumoca-phase-dae/: Cargo.toml  README.md
crates/rumoca-phase-dae/src/: algorithm_lowering.rs  appendix_b_validation.rs  balance.rs  (+38 more)
(+2443 files in other folders)
