[workspace]
resolver = "2"
members = [
    "crates/rumoca",
    "crates/rumoca-worker",
    "crates/rumoca-test-msl",
    "crates/rumoca-core",
    "crates/rumoca-contracts",
    "crates/rumoca-ir-dae",
    "crates/rumoca-ir-solve",
    "crates/rumoca-eval-ast",
    "crates/rumoca-eval-flat",
    "crates/rumoca-eval-dae",
    "crates/rumoca-eval-solve",
    "crates/rumoca-ir-ast",
    "crates/rumoca-ir-flat",
    "crates/rumoca-phase-codegen",
    "crates/rumoca-phase-flatten",
    "crates/rumoca-phase-instantiate",
    "crates/rumoca-phase-parse",
    "crates/rumoca-phase-resolve",
    "crates/rumoca-phase-dae",
    "crates/rumoca-phase-structural",
    "crates/rumoca-phase-solve",
    "crates/rumoca-signal-frame",
    "crates/rumoca-codec",
    "crates/rumoca-codec-flatbuffers",
    "crates/rumoca-transport-udp",
    "crates/rumoca-transport-websocket",
    "crates/rumoca-input",
    "crates/rumoca-input-gamepad",
    "crates/rumoca-input-keyboard",
    "crates/rumoca-solver",
    "crates/rumoca-sim",
    "crates/rumoca-solver-diffsol",
    "crates/rumoca-solver-rk45",
    "crates/rumoca-viz-web",
    "crates/rumoca-phase-typecheck",
		"crates/rumoca-phase-galec",
    # Compile pipeline and tools
    "crates/rumoca-compile",
    "crates/rumoca-tool-lint",
    "crates/rumoca-tool-fmt",
    "crates/rumoca-tool-lsp",
    "crates/xtask",
    # Bindings
    "crates/rumoca-bind-wasm",
    "crates/rumoca-bind-wasm-diffsol",
    "crates/rumoca-bind-python",
    # Compiled execution adapters
    "crates/rumoca-exec-cranelift",
    "crates/rumoca-exec-mlir",
    "crates/rumoca-exec-wasm",
]

[workspace.package]
version = "0.9.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/cognipilot/rumoca"
homepage = "https://github.com/cognipilot/rumoca"

[workspace.dependencies]
# Internal crates
rumoca = { path = "crates/rumoca" }
rumoca-worker = { path = "crates/rumoca-worker" }
rumoca-core = { path = "crates/rumoca-core" }
rumoca-contracts = { path = "crates/rumoca-contracts" }
rumoca-ir-dae = { path = "crates/rumoca-ir-dae" }
rumoca-ir-solve = { path = "crates/rumoca-ir-solve" }
rumoca-eval-ast = { path = "crates/rumoca-eval-ast" }
rumoca-eval-flat = { path = "crates/rumoca-eval-flat" }
rumoca-eval-dae = { path = "crates/rumoca-eval-dae" }
rumoca-eval-solve = { path = "crates/rumoca-eval-solve" }
rumoca-ir-ast = { path = "crates/rumoca-ir-ast" }
rumoca-ir-flat = { path = "crates/rumoca-ir-flat" }
rumoca-phase-flatten = { path = "crates/rumoca-phase-flatten" }
rumoca-phase-instantiate = { path = "crates/rumoca-phase-instantiate" }
rumoca-phase-parse = { path = "crates/rumoca-phase-parse" }
rumoca-phase-resolve = { path = "crates/rumoca-phase-resolve" }
rumoca-phase-dae = { path = "crates/rumoca-phase-dae" }
rumoca-phase-structural = { path = "crates/rumoca-phase-structural" }
rumoca-phase-solve = { path = "crates/rumoca-phase-solve", default-features = false }
rumoca-phase-codegen = { path = "crates/rumoca-phase-codegen" }
rumoca-phase-galec = { path = "crates/rumoca-phase-galec" }
rumoca-signal-frame = { path = "crates/rumoca-signal-frame" }
rumoca-codec = { path = "crates/rumoca-codec" }
rumoca-codec-flatbuffers = { path = "crates/rumoca-codec-flatbuffers" }
rumoca-transport-udp = { path = "crates/rumoca-transport-udp" }
rumoca-transport-websocket = { path = "crates/rumoca-transport-websocket" }
rumoca-input = { path = "crates/rumoca-input" }
rumoca-input-gamepad = { path = "crates/rumoca-input-gamepad" }
rumoca-input-keyboard = { path = "crates/rumoca-input-keyboard" }
rumoca-solver = { path = "crates/rumoca-solver" }
rumoca-sim = { path = "crates/rumoca-sim", default-features = false }
rumoca-solver-diffsol = { path = "crates/rumoca-solver-diffsol" }
rumoca-solver-rk45 = { path = "crates/rumoca-solver-rk45" }
rumoca-viz-web = { path = "crates/rumoca-viz-web" }
rumoca-phase-typecheck = { path = "crates/rumoca-phase-typecheck" }
rumoca-compile = { path = "crates/rumoca-compile" }
rumoca-exec-cranelift = { path = "crates/rumoca-exec-cranelift" }
rumoca-exec-mlir = { path = "crates/rumoca-exec-mlir" }
rumoca-exec-wasm = { path = "crates/rumoca-exec-wasm" }
rumoca-tool-lint = { path = "crates/rumoca-tool-lint" }
rumoca-tool-fmt = { path = "crates/rumoca-tool-fmt" }
rumoca-tool-lsp = { path = "crates/rumoca-tool-lsp", default-features = false }
rumoca-bind-wasm = { path = "crates/rumoca-bind-wasm" }
rumoca-bind-python = { path = "crates/rumoca-bind-python" }
rumoca-test-msl = { path = "crates/rumoca-test-msl" }

# External dependencies
anyhow = "1.0"
mimalloc = "0.1"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
core_affinity = "0.8"
dirs = "6.0"
flate2 = "1.0"
indexmap = { version = "2.7", features = ["serde"] }
miette = { version = "7.4", features = ["fancy"] }
minijinja = { version = "2.5", features = ["debug", "preserve_order"] }
parol = "=4.2.2"
parol_runtime = "=4.2.0"
rayon = "1.10"
rustc-hash = "2.0"
scnr2 = "0.3.3"
sigpipe = "0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
bincode = "1.3"
futures-util = "0.3"
tar = "0.4"
thiserror = "2.0"
toml = "0.8"
tempfile = "3.10"
libloading = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "3.0"
walkdir = "2.5"
zip = "2.4"
# LSP types (usable from WASM and native, must match tower-lsp's version)
lsp-types = "0.94"
# LSP server (native only)
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "deny"
unnameable_types = "deny"
private_interfaces = "deny"
private_bounds = "deny"
exported_private_dependencies = "deny"
dead_code = "deny"

# Code complexity lints (SPEC_0021)
# Thresholds configured in clippy.toml
[workspace.lints.clippy]
# Enable lint groups - deny to make warnings into compile errors
all = { level = "deny", priority = -1 }
# Intentionally not enabling `cargo`/`pedantic` as workspace-wide lint groups.
# They produce high-noise warnings under our `-D warnings` CI mode; we prefer
# targeted deny rules and incremental lint hardening.
# Complexity lints
excessive_nesting = "deny"
too_many_lines = "deny"
too_many_arguments = "deny"
# Crate-boundary hardening
# Do not blanket-ban re-exports; SPEC_0029 is enforced by targeted architecture tests.
pub_use = "allow"
# Visibility shorthand style lints are orthogonal to architecture; leave them off.
pub_with_shorthand = "allow"
pub_without_shorthand = "allow"
missing_enforced_import_renames = "deny"

# For faster builds
[profile.dev]
opt-level = 1

# `build-override` applies to build scripts and proc-macro crates only.
# It speeds up codegen-heavy macro/build tooling without forcing all dev crates
# to compile at higher optimization levels.
[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

# Compiler-throughput tuning: thin LTO + single codegen unit measurably speed
# the hot compile/simulate paths; build-time cost is acceptable for release.
[profile.release]
lto = "thin"
codegen-units = 1

# Speed up parser-heavy runtime in normal debug builds.
[profile.dev.package.rumoca-phase-parse]
opt-level = 3
[profile.dev.package.rumoca-compile]
opt-level = 2
[profile.dev.package.parol_runtime]
opt-level = 3
[profile.dev.package.scnr2]
opt-level = 3
