[package]
name = "rumoca-bind-python"
description = "Python bindings for Rumoca Modelica compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rumoca"
crate-type = ["cdylib"]

[dependencies]
rumoca-session = { workspace = true }
rumoca-phase-parse = { workspace = true }
rumoca-phase-codegen = { workspace = true }
rumoca-tool-lint = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = { workspace = true }

[lints]
workspace = true
