[package]
name = "rumoca-bind-python"
description = "Python bindings for Rumoca Modelica compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rumoca"
crate-type = ["cdylib"]

[dependencies]
rumoca = { workspace = true }
rumoca-sim = { workspace = true }
rumoca-solver-diffsol = { workspace = true }
rumoca-compile = { workspace = true }
rumoca-tool-fmt = { workspace = true }
rumoca-tool-lint = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"

[lints]
workspace = true
