[package]
name = "rumoca-bind-python"
description = "Python bindings for Rumoca Modelica compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rumoca"
crate-type = ["cdylib"]
# Skip rustdoc to avoid a workspace-doc filename collision with the
# top-level `rumoca` crate; the cdylib is a thin pyo3 glue layer with
# no Rust-facing API worth documenting.
doc = false

[dependencies]
rumoca = { workspace = true }
rumoca-core = { workspace = true }
rumoca-ir-dae = { workspace = true }
rumoca-sim = { workspace = true, features = ["solver-diffsol", "solver-rk45"] }
rumoca-compile = { workspace = true }
rumoca-tool-fmt = { workspace = true }
rumoca-tool-lint = { workspace = true }
# `abi3-py310` builds against CPython's stable ABI: one wheel per platform works
# on every CPython >= 3.10 (and future releases), instead of one wheel per
# Python minor version. Cuts the wheel matrix and avoids source builds when a
# user is on a Python version we didn't pre-build.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
serde_json = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"

[lints]
workspace = true
