[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rumoca"
version = "0.9.8"
description = "Python interface for the Rumoca Modelica compiler"
license = {text = "Apache-2.0"}
authors = [{name = "Rumoca Contributors"}]
keywords = ["modelica", "compiler", "simulation", "dae", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
requires-python = ">=3.10"

# IPython is only needed for the `%%modelica` Jupyter cell magic, which only runs
# inside an IPython/Jupyter kernel anyway. Keep it optional so `import rumoca`
# (e.g. in a plain script) never drags in the notebook stack: install with
# `pip install rumoca[notebook]` for the magic.
[project.optional-dependencies]
notebook = ["ipython"]

[project.urls]
Homepage = "https://github.com/cognipilot/rumoca"
Repository = "https://github.com/cognipilot/rumoca"
Issues = "https://github.com/cognipilot/rumoca/issues"

[tool.maturin]
manifest-path = "Cargo.toml"
# Mixed Rust+Python layout: the compiled extension is `rumoca._native`, and the
# pure-Python package under `python/rumoca/` re-exports it and adds the
# `%%modelica` Jupyter cell magic.
module-name = "rumoca._native"
python-source = "python"
