[package]
name = "rumoca-bind-wasm"
description = "WebAssembly bindings for Rumoca compile and optional simulation surfaces"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt settings used when building published packages (build.mjs --optimize,
# which drops the default --no-opt). -Oz optimizes for size; the thread/bulk-
# memory features keep the wasm-rayon variants valid.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--enable-threads', '--enable-bulk-memory']

[dependencies]
rumoca-compile = { workspace = true }
rumoca-core = { workspace = true }
rumoca-eval-ast = { workspace = true }
rumoca-ir-solve = { workspace = true, optional = true }
rumoca-sim = { workspace = true, default-features = false, optional = true }
rumoca-tool-lint = { workspace = true }
# default-features = false drops the `server`+`simulation` features and keeps
# light builds on completions/diagnostics/helpers only.
rumoca-tool-lsp = { workspace = true, default-features = false }
bincode = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }

[features]
default = ["console_error_panic_hook"]
# The full web build is the browser-safe simulation build: explicit rk45 only.
# Diffsol must NOT be added here — it pulls the Pulp relaxed-SIMD graph, which
# is not safe in all browsers (guarded by
# architecture_hardening_test::test_bind_wasm_full_web_uses_browser_safe_solver_graph).
full-web = ["sim-rk45"]
sim-wasm = ["dep:rumoca-sim", "dep:rumoca-ir-solve", "rumoca-sim/wasm-solvers"]
sim-diffsol = ["dep:rumoca-sim", "dep:rumoca-ir-solve", "rumoca-sim/solver-diffsol"]
sim-rk45 = ["dep:rumoca-sim", "dep:rumoca-ir-solve", "rumoca-sim/solver-rk45"]
stepper-diffsol = ["sim-diffsol"]
wasm-rayon = ["dep:wasm-bindgen-rayon"]

[lints]
workspace = true
