[package]
name = "rumoca-contracts"
description = "MLS contract testing framework for the Rumoca compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Testing framework dependencies
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

# Session facade provides parsing/compile/runtime contract APIs
rumoca-session = { workspace = true }

[lints]
workspace = true
