[package]
name = "rumoca-eval-compiled"
description = "Compiled evaluation layout and lowering infrastructure for Rumoca"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["cranelift"]
cranelift = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-jit",
    "dep:cranelift-module",
]
wasm = ["dep:wasm-encoder"]

[dependencies]
rumoca-ir-dae = { workspace = true }
rumoca-ir-flat = { workspace = true }
indexmap = { workspace = true }
cranelift-codegen = { version = "0.125", optional = true }
cranelift-frontend = { version = "0.125", optional = true }
cranelift-jit = { version = "0.125", optional = true }
cranelift-module = { version = "0.125", optional = true }
wasm-encoder = { version = "0.241", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
rumoca-eval-runtime = { workspace = true }
wasmparser = "0.241"

[lints]
workspace = true
