[package]
name = "rumoca-exec-mlir"
description = "MLIR compiled execution adapter — compile Solve-IR to native or GPU artifacts, then load them"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-ir-solve = { workspace = true }
rumoca-eval-solve = { workspace = true }
rumoca-phase-codegen = { workspace = true }
libloading = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
indexmap = { workspace = true }
rumoca-core = { workspace = true }
rumoca-phase-solve = { workspace = true }
rumoca-ir-dae = { workspace = true }

[lints]
workspace = true
