[package]
name = "rumoca-exec-wasm"
description = "WASM execution adapter for compiled Solve-IR row kernels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-ir-solve = { workspace = true }
wasm-encoder = "0.241"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"

[dev-dependencies]
wasmparser = "0.241"

[lints]
workspace = true
