[package]
name = "rumoca-galec"
description = "GALEC (Guarded Algorithmic Language for Embedded Control) language module: AST, printer, validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
