[package]
name = "rumoca-galec"
description = "GALEC (Guarded Algorithmic Language for Embedded Control) language module: AST, printer, validator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
thiserror = { workspace = true }
parol_runtime = { workspace = true, optional = true }
scnr2 = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[build-dependencies]
parol = { workspace = true }

[features]
parse = ["dep:parol_runtime", "dep:scnr2", "dep:anyhow"]

[lints]
workspace = true
