[package]
name = "rumoca-input"
description = "Input engine + signal mapping for Rumoca lockstep simulations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-codec = { workspace = true }

anyhow = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Native-only device crates. These own the gilrs / crossterm deps;
# rumoca-input itself has none on wasm, so the engine + signal mapper
# gate at build time.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rumoca-input-gamepad = { workspace = true }
rumoca-input-keyboard = { workspace = true }

[lints]
workspace = true
