[package]
name = "rumoca-io-fb"
description = "FlatBuffer schema reflection and codec support for Rumoca lockstep I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rumoca-io = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
