[package]
name = "rumoca-ir-dae"
description = "Hybrid DAE representation for the Rumoca compiler (MLS Appendix B)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
strict-ir-validation = []

[dependencies]
rumoca-core = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
